[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/dialogue_menu/dialogue_menu.gd" type="Script" id=1]
[ext_resource path="res://ui_theme/kenneyUI-yellow.tres" type="Theme" id=2]
[ext_resource path="res://assets/background/interior1.png" type="Texture" id=3]

[node name="DialogueMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="DialogueBackground" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="DialogueBackground"]
margin_left = 122.0
margin_top = 88.0
margin_right = 485.0
margin_bottom = 692.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="DialoguePanel" type="Panel" parent="."]
margin_left = 64.0
margin_top = 410.0
margin_right = 969.0
margin_bottom = 574.0
theme = ExtResource( 2 )

[node name="ChoicesScrollContainer" type="ScrollContainer" parent="DialoguePanel"]
margin_left = 692.0
margin_top = 11.0
margin_right = 887.0
margin_bottom = 153.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/ChoicesScrollContainer"]
margin_right = 195.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogContentScrollContainer" type="ScrollContainer" parent="DialoguePanel"]
margin_left = 18.0
margin_top = 17.0
margin_right = 689.0
margin_bottom = 147.0

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/DialogContentScrollContainer"]
margin_right = 671.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterName" type="Label" parent="DialoguePanel/DialogContentScrollContainer/VBoxContainer"]
margin_right = 671.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[character name]"

[node name="DialogueContent" type="Label" parent="DialoguePanel/DialogContentScrollContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 671.0
margin_bottom = 103.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  "
autowrap = true
